exports[`<List /> React component unit test suite Renders correctly with circle marker 1`] = `
<ul
  className="ul">
  <li
    className="li copy markerCircle">
    List Item 1
  </li>
  <li
    className="li copy markerCircle">
    List Item 2
  </li>
  <li
    className="li copy markerCircle">
    List Item 3
  </li>
</ul>
`;

exports[`<List /> React component unit test suite Renders correctly with default props 1`] = `
<ul
  className="ul">
  <li
    className="li copy">
    List Item 1
  </li>
  <li
    className="li copy">
    List Item 2
  </li>
  <li
    className="li copy">
    List Item 3
  </li>
</ul>
`;

exports[`<List /> React component unit test suite Renders correctly with disc marker 1`] = `
<ul
  className="ul">
  <li
    className="li copy markerDisc">
    List Item 1
  </li>
  <li
    className="li copy markerDisc">
    List Item 2
  </li>
  <li
    className="li copy markerDisc">
    List Item 3
  </li>
</ul>
`;

exports[`<List /> React component unit test suite Renders correctly with text-copy prop 1`] = `
<ul
  className="ul">
  <li
    className="li copy">
    List Item 1
  </li>
  <li
    className="li copy">
    List Item 2
  </li>
  <li
    className="li copy">
    List Item 3
  </li>
</ul>
`;

exports[`<List /> React component unit test suite Renders correctly without text-copy prop 1`] = `
<ul
  className="ul">
  <li
    className="li">
    List Item 1
  </li>
  <li
    className="li">
    List Item 2
  </li>
  <li
    className="li">
    List Item 3
  </li>
</ul>
`;
